Saving new changes in HTML structure of the Gifs gallery (index.html), and saving new styles added for all this new structure

--- a/giF0S_Project/Index.html
+++ b/giF0S_Project/Index.html
@@ -79,16 +79,45 @@
     <div id="trendsSection">
         <input type="text" id="trends" name="trends" placeholder="&nbsp;&nbsp;Tendencias:" size="32">
         <div class="trendsCharge">
-            <img class="trendsFirstCharge" src="./Images/Test.jpg" alt="Test">
-            <img src="./Images/Test.jpg" alt="Test">
-            <img src="./Images/Test.jpg" alt="Test">
-            <img src="./Images/Test.jpg" alt="Test">
+            <div id="trendsCharge1">
+                <p></p>
+            </div>
+            <div id="trendsCharge2" class="secondaryTrendsCharge"></div>
+            <div id="trendsCharge3" class="secondaryTrendsCharge"></div>
+            <div id="trendsCharge4" class="secondaryTrendsCharge"></div>
         </div>
         <div class="trendsCharge">
-            <img class="trendsFirstCharge" src="./Images/Test.jpg" alt="Test">
-            <img src="./Images/Test.jpg" alt="Test">
-            <img src="./Images/Test.jpg" alt="Test">
-            <img src="./Images/Test.jpg" alt="Test">
+            <div id="trendsCharge5" class="bigLeftTrendsCharge"></div>
+            <div id="trendsCharge6" class="secondaryTrendsCharge"></div>
+            <div id="trendsCharge7" class="secondaryTrendsCharge"></div>
+        </div>
+        <div class="trendsCharge">
+            <div id="trendsCharge8" class="secondaryTrendsCharge"></div>
+            <div id="trendsCharge9" class="secondaryTrendsCharge"></div>
+            <div id="trendsCharge10" class="bigRightTrendsCharge"></div>
+        </div>
+        <div class="trendsCharge">
+            <div id="trendsCharge11" class="secondaryTrendsCharge"></div>
+            <div id="trendsCharge12" class="secondaryTrendsCharge"></div>
+            <div id="trendsCharge13" class="secondaryTrendsCharge"></div>
+            <div id="trendsCharge14" class="secondaryTrendsCharge"></div>
+        </div>
+
+        <div class="trendsCharge">
+            <div id="trendsCharge15" class="bigLeftTrendsCharge"></div>
+            <div id="trendsCharge16" class="secondaryTrendsCharge"></div>
+            <div id="trendsCharge17" class="secondaryTrendsCharge"></div>
+        </div>
+        <div class="trendsCharge">
+            <div id="trendsCharge18" class="secondaryTrendsCharge"></div>
+            <div id="trendsCharge19" class="secondaryTrendsCharge"></div>
+            <div id="trendsCharge20" class="bigRightTrendsCharge"></div>
+        </div>
+        <div class="trendsCharge">
+            <div id="trendsCharge21" class="secondaryTrendsCharge"></div>
+            <div id="trendsCharge22" class="secondaryTrendsCharge"></div>
+            <div id="trendsCharge23" class="secondaryTrendsCharge"></div>
+            <div id="trendsCharge24" class="secondaryTrendsCharge"></div>
         </div>
     </div>
     <script type="text/javascript" src="index.js"></script>
