Saving new advances to getting GIFS from the API, putting them into the DOM AND giving them styles according to the HTML structure previously designed

--- a/giF0S_Project/Index.html
+++ b/giF0S_Project/Index.html
@@ -33,7 +33,7 @@
             </div>
 
             <div id="formSearch">
-                <input type="search" id="mySearch" name="mySearch" onsearch="myFunction()"
+                <input type="search" id="mySearch" name="mySearch" onsearch="gettingSearchValue()"
                     placeholder="   Busca gifs, hashtags, temas, busca lo que quieras..." size="30">
                 <button id="buttonSearch" type="button">
                     <div id="buttonContent"><img id="mGlassImage" src="./Images/lupa_inactive.svg"
@@ -79,45 +79,45 @@
     <div id="trendsSection">
         <input type="text" id="trends" name="trends" placeholder="&nbsp;&nbsp;Tendencias:" size="32">
         <div class="trendsCharge">
-            <div id="trendsCharge1">
-                <p></p>
+            <div id="gifSuggest5">
+                <div></div>
             </div>
-            <div id="trendsCharge2" class="secondaryTrendsCharge"></div>
-            <div id="trendsCharge3" class="secondaryTrendsCharge"></div>
-            <div id="trendsCharge4" class="secondaryTrendsCharge"></div>
+            <div id="gifSuggest6" class="secondaryTrendsCharge"></div>
+            <div id="gifSuggest7" class="secondaryTrendsCharge"></div>
+            <div id="gifSuggest8" class="secondaryTrendsCharge"></div>
         </div>
         <div class="trendsCharge">
-            <div id="trendsCharge5" class="bigLeftTrendsCharge"></div>
-            <div id="trendsCharge6" class="secondaryTrendsCharge"></div>
-            <div id="trendsCharge7" class="secondaryTrendsCharge"></div>
+            <div id="gifSuggest9" class="bigLeftTrendsCharge"></div>
+            <div id="gifSuggest10" class="secondaryTrendsCharge"></div>
+            <div id="gifSuggest11" class="secondaryTrendsCharge"></div>
         </div>
         <div class="trendsCharge">
-            <div id="trendsCharge8" class="secondaryTrendsCharge"></div>
-            <div id="trendsCharge9" class="secondaryTrendsCharge"></div>
-            <div id="trendsCharge10" class="bigRightTrendsCharge"></div>
+            <div id="gifSuggest12" class="secondaryTrendsCharge"></div>
+            <div id="gifSuggest13" class="secondaryTrendsCharge"></div>
+            <div id="gifSuggest14" class="bigRightTrendsCharge"></div>
         </div>
         <div class="trendsCharge">
-            <div id="trendsCharge11" class="secondaryTrendsCharge"></div>
-            <div id="trendsCharge12" class="secondaryTrendsCharge"></div>
-            <div id="trendsCharge13" class="secondaryTrendsCharge"></div>
-            <div id="trendsCharge14" class="secondaryTrendsCharge"></div>
+            <div id="gifSuggest15" class="secondaryTrendsCharge"></div>
+            <div id="gifSuggest16" class="secondaryTrendsCharge"></div>
+            <div id="gifSuggest17" class="secondaryTrendsCharge"></div>
+            <div id="gifSuggest18" class="secondaryTrendsCharge"></div>
         </div>
 
         <div class="trendsCharge">
-            <div id="trendsCharge15" class="bigLeftTrendsCharge"></div>
-            <div id="trendsCharge16" class="secondaryTrendsCharge"></div>
-            <div id="trendsCharge17" class="secondaryTrendsCharge"></div>
+            <div id="gifSuggest19" class="bigLeftTrendsCharge"></div>
+            <div id="gifSuggest20" class="secondaryTrendsCharge"></div>
+            <div id="gifSuggest21" class="secondaryTrendsCharge"></div>
         </div>
         <div class="trendsCharge">
-            <div id="trendsCharge18" class="secondaryTrendsCharge"></div>
-            <div id="trendsCharge19" class="secondaryTrendsCharge"></div>
-            <div id="trendsCharge20" class="bigRightTrendsCharge"></div>
+            <div id="gifSuggest22" class="secondaryTrendsCharge"></div>
+            <div id="gifSuggest23" class="secondaryTrendsCharge"></div>
+            <div id="gifSuggest24" class="bigRightTrendsCharge"></div>
         </div>
         <div class="trendsCharge">
-            <div id="trendsCharge21" class="secondaryTrendsCharge"></div>
-            <div id="trendsCharge22" class="secondaryTrendsCharge"></div>
-            <div id="trendsCharge23" class="secondaryTrendsCharge"></div>
-            <div id="trendsCharge24" class="secondaryTrendsCharge"></div>
+            <div id="gifSuggest25" class="secondaryTrendsCharge"></div>
+            <div id="gifSuggest26" class="secondaryTrendsCharge"></div>
+            <div id="gifSuggest27" class="secondaryTrendsCharge"></div>
+            <div id="gifSuggest28" class="secondaryTrendsCharge"></div>
         </div>
     </div>
     <script type="text/javascript" src="index.js"></script>
