saving changes about the select theme functionality, where the user can use a select input to change the light theme to dark theme

--- a/giF0S_Project/Index.html
+++ b/giF0S_Project/Index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>giF0S Project</title>
-    <link rel="stylesheet" href="./Styles/Styles.css">
+    <link id="themeDarkSelect" rel="stylesheet" href="./Styles/Styles.css">
     <link href="https://fonts.googleapis.com/css?family=Chakra+Petch&display=swap" rel="stylesheet">
 </head>
 
