--- a/giF0S_Project/Theme2/Theme2.html
+++ b/giF0S_Project/Theme2/Theme2.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Chakra+Petch&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="themeDark">
     <div>
         <header id="title">
             <h1>Bienvenidos/as a Guifos.com!------Donde los gifs están//////Número de visitas:</h1>
