Saving final changes in the html structure and its styles for theme light

--- a/giF0S_Project/Index.html
+++ b/giF0S_Project/Index.html
@@ -25,13 +25,16 @@
                 <ul id="menuThemes">
                     <li class="day" onclick="lightThemeCall()">
                         Sailor Day
-                    </li>                
+                    </li>
                     <li class="night" onclick="darkThemeCall()">
                         Sailor Night
-                    </li>                
-            </ul>    
-            </button>                        
-            <a href=""><p id="linkMyGifos"><ins>M</ins>is Guifos</p></a>
+                    </li>
+                </ul>
+            </button>
+            <a href="">
+                <p id="linkMyGifos"><ins>M</ins>is Guifos
+                </p>
+            </a>
         </div>
         <!--SECTION BAR SEARCH -->
         <div id="searchBox">
@@ -95,11 +98,11 @@
             </div>
             <div id="gifSuggest8" class="secondaryTrendsCharge">
                 <p id="hashtagGif8"></p>
-            </div>            
+            </div>
         </div>
         <div class="trendsCharge">
             <div id="gifSuggest9" class="bigLeftTrendsCharge">
-                <p id="hashtagGif9"></p> 
+                <p id="hashtagGif9"></p>
             </div>
             <div id="gifSuggest10" class="secondaryTrendsCharge">
                 <p id="hashtagGif10"></p>
