Saving new changes about Styles of the dark mode

--- a/giF0S_Project/Index.html
+++ b/giF0S_Project/Index.html
@@ -45,8 +45,11 @@
                 <input type="search" id="mySearch" name="mySearch" autocomplete="off" onsearch="gettingSearchValue()"
                     placeholder="   Busca gifs, hashtags, temas, busca lo que quieras..." size="30">
                 <button id="buttonSearch" type="button">
-                    <div id="buttonContent"><img id="mGlassImage" src="./Images/lupa_inactive.svg"
-                            alt="magnifying_glass_image"> Buscar</div>
+                    <div id="buttonContent">
+                        <img id="mGlassImage" src="./Images/lupa_inactive.svg" alt="magnifying_glass_image">
+                        <img id="mGlassImageDark" src="./Images/Combined_Shape.svg" alt="magnifying_glass_image"> 
+                        <img id="mGlassLight" src="./Images/lupa_light.svg" alt="magnifying_glass_image">
+                        <img id="mGlass" src="./Images/lupa.svg" alt="magnifying_glass_image"> Buscar</div>
                 </button>
             </div>
             <!--SECTION SUB MENU SEARCH -->
