--- a/giF0S_Project/Index.html
+++ b/giF0S_Project/Index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>giF0S Project</title>
-    <link id="themeSelector" rel="stylesheet" href="./Styles/Styles.css">
+    <link id="themeSelector" rel="stylesheet" href="./Styles/LightStyles/Styles.css">
     <link href="https://fonts.googleapis.com/css?family=Chakra+Petch&display=swap" rel="stylesheet">
 </head>
 
@@ -177,7 +177,7 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="./Scripts/index.js"></script>
 </body>
 
 </html>
