Adding new changes about the dynamic behavior in the interaction with the user, talking about the each of type of search that user can do

--- a/giF0S_Project/Index.html
+++ b/giF0S_Project/Index.html
@@ -43,7 +43,7 @@
             </div>
             <div id="formSearch">
                 <input type="search" id="mySearch" name="mySearch" autocomplete="off" onsearch="gettingSearchValue()"
-                    placeholder="   Busca gifs, hashtags, temas, busca lo que quieras..." size="30">
+                    placeholder="Busca gifs, hashtags, temas, busca lo que quieras..." size="30">
                 <button id="buttonSearch" type="button">
                     <div id="buttonContent">
                         <img id="mGlassImage" src="./Images/lupa_inactive.svg" alt="magnifying_glass_image">
@@ -54,14 +54,14 @@
             </div>
             <!--SECTION SUB MENU SEARCH -->
             <div id="subMenuSearch">
-                <button id="resultSearch">&nbsp;&nbsp;Resultado de búsqueda sugerido</button>
-                <button id="similarResult">&nbsp;&nbsp;Un resultado similar de búsqueda</button>
-                <button id="otherOneResult">&nbsp;&nbsp;Y otro más</button>
+                <button id="Result1">&nbsp;&nbsp;Resultado de búsqueda sugerido</button>
+                <button id="Result2">&nbsp;&nbsp;Un resultado similar de búsqueda</button>
+                <button id="Result3">&nbsp;&nbsp;Y otro más</button>
             </div>
         </div>
 
     </div>
-
+<div id="buttonsContainer"></div>
     <!--SECTION SUGGESTIONS -->
     <div id="suggestions">
         <input id="suggest" type="text" name="we_suggest_you" placeholder="&nbsp;&nbsp;Hoy te sugerimos:" size="32">
