--- a/giF0S_Project/Catch/Catch.html
+++ b/giF0S_Project/Catch/Catch.html
@@ -20,9 +20,10 @@
     </div>
     <div id="videoContainer">
         <div>
-            <h1>Un Chequeo Antes de Empezar<button type="button" id="buttonClose"></button></h1>
+            <h1 id="statuscapture">Un Chequeo Antes de Empezar<button type="button" id="buttonClose"></button></h1>
             <div id="showCapture">
                 <video id="video" src=""></video>
+                <img id="gif" src="" alt="">
             </div>
             <button type="button" id="catchButton">
                 <div id="cameraButton">
@@ -32,10 +33,26 @@
                     Capturar
                 </div>
             </button>
+            <button type="button" id="recordButton">
+                <div id="circleButton">
+                    <img src="../Images/recording.svg" alt="camera_Image">
+                </div>
+                <div id="readyButton">
+                    Listo
+                </div>
+            </button>
+            <button type="button" id="stopButton" disabled>
+                <div id="1Button">
+                    <img src="../Images/recording.svg" alt="camera_Image">
+                </div>
+                <div id="2Button">
+                    Parar
+                </div>
+            </button>
         </div>
     </div>
-    <script src="./Scripts/Catch.js"></script>
     <script src="https://www.WebRTC-Experiment.com/RecordRTC.js"></script>
+    <script src="./Scripts/Catch.js" type="text/javascript"></script>    
 </body>
 
 </html>
