Saving a litle style changes over the capture section

--- a/giF0S_Project/Catch/Catch.html
+++ b/giF0S_Project/Catch/Catch.html
@@ -15,7 +15,7 @@
         </header>
     </div>
     <div id="buttonZone">
-        <a id="arrowBack" href="../Index.html"><img src="../Images/arrow.svg" alt="arrow_To_Back"></a>
+        <a id="arrowBack" href="../Pre_Catch/Pre_Catch.html"><img src="../Images/arrow.svg" alt="arrow_To_Back"></a>
         <img id="logotipe" src="../Images/gifOF_logo.png" alt="Logo blu Gifos">
     </div>
     <div id="videoContainer">
@@ -42,10 +42,10 @@
                 </div>
             </button>
             <button type="button" id="stopButton" disabled>
-                <div id="1Button">
+                <div id="buttonTwo">
                     <img src="../Images/recording.svg" alt="camera_Image">
                 </div>
-                <div id="2Button">
+                <div id="buttonThree">
                     Parar
                 </div>
             </button>
