--- a/giF0S_Project/Pre_Catch/Pre_Catch.html
+++ b/giF0S_Project/Pre_Catch/Pre_Catch.html
@@ -50,7 +50,10 @@
                 <button type="button"><a href="../Index.html">Cancelar</a></button>
                 <button type="button"><a href="../Catch/Catch.html">Comenzar</a></button>
             </div>
-        </div>
+        </div>        
+    </div>
+    <div id="suggestions">
+        <input id="suggest" type="text" name="we_suggest_you" placeholder="&nbsp;&nbsp;Mis Guifos:" size="32">
     </div>
     <script src="./Scripts/Catch.js"></script>
 </body>
